--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "@prisma/client": "^5.18.0"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.6"
+    "@types/pg": "^8.11.6",
+    "prisma": "^5.18.0"
   }
 }
