--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "scripts": {
     "dev": "next dev",
     "prisma:generate": "prisma generate",
-    "build": "prisma generate && next build",
+    "build": "prisma migrate deploy && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prisma:seed": "prisma db seed"
   },
   "dependencies": {
     "@types/node": "^20.14.9",
@@ -28,5 +29,8 @@
   "devDependencies": {
     "@types/pg": "^8.11.6",
     "prisma": "^5.18.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
