chore: update npm scripts

--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
   },
   "scripts": {
     "dev": "next dev",
-    "prisma:generate": "prisma generate",
-    "build": "prisma migrate deploy && prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "prisma:seed": "prisma db seed"
+    "vercel-build": "prisma migrate deploy && next build"
   },
   "dependencies": {
     "@types/node": "^20.14.9",
