feat: add theme switching with shared palette

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "next-themes": [
+        "./lib/next-themes"
       ]
     },
     "plugins": [
