feat: refresh styling with dark-first theming

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       ],
       "next-themes": [
         "./lib/next-themes"
+      ],
+      "lucide-react": [
+        "./lib/lucide-react"
       ]
     },
     "plugins": [
