--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "next": "^14.2.5",
+    "framer-motion": "^11.0.27",
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
