--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.5.3",
-    "@prisma/client": "^5.18.0"
+    "@prisma/client": "^5.18.0",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
