--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vercel-build": "prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -23,14 +24,13 @@
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.5.3",
-    "@prisma/client": "^5.18.0",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/pg": "^8.11.6",
-    "prisma": "^5.18.0"
+    "prisma": "^6.16.2"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
