--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/node": "24.6.2",
+    "@types/pg": "^8.15.5",
     "@types/react": "19.2.0",
     "typescript": "5.9.3"
   },
